retrying z-index modal fix

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -134,7 +134,7 @@ table tr td :last-child {
 
 // Keeps the contact me modal above the nav-bar
 .modal{
-  z-index: 101;
+  z-index: 101 !important;
 }
 
 #search-container {
